--- a/package.json
+++ b/package.json
@@ -6,13 +6,11 @@
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
+    "lint": "node_modules/.bin/eslint --ext .js,.vue src",
     "start": "npm run dev",
     "build": "node build/build.js"
   },
-  "dependencies": {
-    "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
-  },
+  "dependencies": {},
   "devDependencies": {
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
@@ -26,6 +24,10 @@
     "chalk": "^2.0.1",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
+    "eslint": "^4.15.0",
+    "eslint-plugin-html": "^4.0.1",
+    "eslint-plugin-vue": "^4.2.0",
+    "eslint-plugin-vue-libs": "^2.1.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
@@ -42,7 +44,9 @@
     "shelljs": "^0.7.6",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
+    "vue": "^2.5.2",
     "vue-loader": "^13.3.0",
+    "vue-router": "^3.0.1",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
     "webpack": "^3.6.0",
