--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "start": "npm run dev",
     "build": "node build/build.js"
   },
-  "dependencies": {},
+  "dependencies": {
+    "vue-i18n": "^7.4.0"
+  },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
