--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "vue-i18n": "^7.4.0"
+    "vue-i18n": "^7.4.0",
+    "vue-resource": "^1.3.5"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
